--- a/ab_test/ab_test.ipynb
+++ b/ab_test/ab_test.ipynb
@@ -677,8 +677,6 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
-    "# Seaborn을 사용하여 막대 그래프 생성\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(data=df, x='test_group', y='mem_cnt', hue='period_status')\n",
     "plt.xlabel('Test Group')\n",
@@ -686,7 +684,6 @@
     "plt.ylabel('Member Count')\n",
     "plt.title('Member Count by Test Group and Period Status')\n",
     "\n",
-    "# 데이터 라벨 추가\n",
     "for p in plt.gca().patches:\n",
     "    plt.gca().annotate(f'{p.get_height():.0%}', (p.get_x() + p.get_width() / 2., p.get_height()),\n",
     "                ha='center', va='bottom', fontsize=12, color='black', xytext=(0, 5),\n",
@@ -869,17 +866,18 @@
     "df['gap']=-df['before']+df['after']\n",
     "delta=(df.iloc[0,-1])\n",
     "\n",
-    "# 'Double-Difference-Method' 열 계산\n",
+    "# 'Double-Difference-Method' \n",
     "df['Double-Difference-Method'] = round(df['after'] - df['before'] +0.06,2)\n",
     "df\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion\n",
+    "- Discount coupon has impact on conversion rate(5000krw discount coupon : 7%, 5% discount coupon)"
+   ]
   }
  ],
  "metadata": {
