--- a/ab_test/ab_test.ipynb
+++ b/ab_test/ab_test.ipynb
@@ -876,7 +876,7 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "- Discount coupon has impact on conversion rate(5000krw discount coupon : 7%, 5% discount coupon)"
+    "- Discount coupon has impact on conversion rate(5000krw discount coupon : 7%, 5% discount coupon : 10%)"
    ]
   }
  ],
